# humblFINANCE-backend

./: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/: main.py
backend/alembic/: env.py
backend/src/: container.py  server.py  worker.py
backend/src/api/v1/: user_table.py
backend/src/app/: container.py  server.py
backend/src/app/auth/adapter/input/api/: __init__.py
backend/src/app/auth/adapter/input/api/v1/: auth.py
backend/src/app/auth/application/exception/: __init__.py
backend/src/app/auth/application/service/: jwt.py
backend/src/app/auth/domain/usecase/: jwt.py
backend/src/app/user/: container.py
backend/src/app/user/adapter/input/api/: __init__.py
backend/src/app/user/adapter/input/api/v1/: user.py
backend/src/app/user/adapter/output/persistence/: repository_adapter.py
backend/src/app/user/adapter/output/persistence/sqlalchemy/: user.py
backend/src/app/user/application/exception/: __init__.py
backend/src/app/user/application/service/: user.py
backend/src/app/user/domain/entity/: user.py
backend/src/app/user/domain/repository/: user.py
backend/src/app/user/domain/usecase/: user.py
backend/src/core/: config.py
backend/src/core/db/: session.py  transactional.py
backend/src/core/fastapi/dependencies/: permission.py
backend/src/core/fastapi/middlewares/: authentication.py  sqlalchemy.py
backend/src/core/helpers/: redis.py  token.py
backend/src/core/helpers/cache/: custom_key_maker.py  redis_backend.py
backend/src/core/repository/: base.py
backend/src/core/utils/: env.py
docker/: docker-compose.yml
