[tool.poetry]
name = "humblfinance-backend"
version = "0.0.1"
description = "a FastAPI backend for the humblFINANCE web app"
authors = ["jjfantini <jenningsfantini+github@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src", from = "backend" }
]

[tool.poetry.dependencies]
python = ">=3.11.7,<3.12"
humbldata = "^1.5.0"
alembic = "^1.13.1"
sqlmodel = "^0.0.16"
fastapi = "^0.111.0"
pydantic-settings = "^2.3.4"
nest-asyncio = "^1.6.0"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.1.6,<0.2.0"
mypy = "^1.9.0"
mkdocs = "^1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"